--- a/index.html
+++ b/index.html
@@ -10,16 +10,88 @@
     <meta name="keywords" content="">
     <meta name="author" content="Santos Romero">
     <!-- bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="css/style.css">
     <!-- fuente -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
     <!-- favicon -->
-     <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
+    <link rel="shortcut icon" href="images/favicon-32x32.png" type="image/x-icon">
     <!-- titulo -->
     <title>Four Card Feature Section | 100 days of projects</title>
 </head>
 
-<body>
+<body class="bg-light">
+
+    <main>
+        <section class="container my-3">
+            <div class="row justify-content-center">
+                <div class="col-12 col-sm-6">
+                    <div class="text-center">
+                        <h1 class="text-secondary fw-light">
+                            Reliable, efficient delivery <br>
+                            <span class="text-dark fw-bold">Powered by Technology</span>
+                        </h1>
+                        <p class="text-secondary">Our Artificial Intelligence powered tools use millions of project data
+                            points to ensure that your project is successful</p>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12 col-sm-4 d-flex align-items-center mt-4">
+                    <div class="card border-0 border-top border-success border-3 shadow p-2">
+                        <div class="card-body">
+                            <h2 class="card-title text-dark fs-4">Supervisor</h2>
+                            <p class="text-secondary">Monitors activity to identity project readblocks</p>
+                            <div class="clearfix">
+                                <img src="images/icon-supervisor.svg" alt="supervisor icon" class="img-fluid float-end" width="50">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 mt-4">
+                    <div class="row d-flex flex-wrap align-content-between gap-4">
+                        <div class="col-12">
+                            <div class="card border-0 border-top border-danger border-3 shadow p-2">
+                                <div class="card-body">
+                                    <h2 class="card-title text-dark fs-4">Team Builder</h2>
+                                    <p class="text-secondary">Scans our talent network to create the optimal team for
+                                        your project</p>
+                                        <div class="clearfix">
+                                            <img src="images/icon-team-builder.svg" alt="team builder icon" class="img-fluid float-end" width="50">
+                                        </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-12">
+                            <div class="card border-0 border-top border-warning border-3 shadow p-2">
+                                <div class="card-body">
+                                    <h2 class="card-title text-dark fs-4">Karma</h2>
+                                    <p class="text-secondary">Regularly ovaluates our talent to ensure quality</p>
+                                    <div class="clearfix">
+                                        <img src="images/icon-karma.svg" alt="karma icon" class="img-fluid float-end" width="50">
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-sm-4 d-flex align-items-center mt-4">
+                    <div class="card border-0 border-top border-primary border-3 shadow p-2">
+                        <div class="card-body">
+                            <h2 class="card-title text-dark fs-4">Calculator</h2>
+                            <p class="text-secondary">Uses data from past projects to provide better delivery estimates
+                            </p>
+                            <div class="clearfix">
+                                <img src="images/icon-calculator.svg" alt="calculator icon" class="img-fluid float-end" width="50">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
 </body>
 
 </html>
